Improvements, different logs for each main app